Fix issue where height of iframe is stuck at max height even after collapse.

--- a/app/components/App.css
+++ b/app/components/App.css
@@ -3,6 +3,6 @@
 }
 
 .expanded {
-  max-height: 360px;
+  max-height: 300px;
   overflow: auto;
 }
